2007-11-16  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: Don't perform a new layout when a label changes its text,
	cause label handles its own autosizing.
	[Fixes bug #342077]

2007-11-16  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Implement 2.0 FindNearestItem methods.

2007-11-15  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripPanel.cs: Make Join at least add the control to the panel,
	even if the rest of what Join does isn't supported.  Add some more
	support for vertical toolbars.
	* ToolStripPanelRow.cs: Add some more support for vertical toolbars.
	[Fixes the application breaking parts of bug #341998]

2007-11-15  Jonathan Pobst <monkey@jpobst.com>

	* ToolStripItem.cs: When determining if we have a check/image margin,
	we need to look at ShowCheckMargin as well as ShowImageMargin.

2007-11-15  Geoff Norton  <gnorton@novell.com>

	* XplatUIOSX.cs: Rename to...
	* XplatUICarbon.cs: and refactor all event handling out to the new event handling
	system in System.Windows.Forms.CarbonInternal.  Lots of code cleanup as well.

2007-11-15  Jonathan Pobst  <monkey@jpobst.com>

	* KeysConverter.cs: The default values should be an array of Keys, not
	strings.  Also, the array has more values for 2.0.
	[Fixes bug #341851]

2007-11-14  Jonathan Pobst  <monkey@jpobst.com>

	* Application.cs: Change ExecutablePath to use 
	Process.GetCurrentProcess ().MainModule.FileName instead of Assembly.GetEntryAssembly.
	[Fixes bug #323552]

2007-11-14  Jonathan Pobst  <monkey@jpobst.com>

	* LineTag.cs: Don't attempt to draw '\r', treat it like it doesn't exist.
	When measureing CR or LF, use /u000D instead of /u0013. (Hex, not decimal.)
	* TextControl.cs: Fix a case in GetLineEnding where a \n before a \r would
	be ignored.  Create a new GetLineEnding that can specify which types of
	line endings to look for.  On Insert, only create new lines for \n and \r\n.
	[Fixes bug #324274]

2007-11-14  Jonathan Pobst  <monkey@jpobst.com>
